fix nav horizontal scroll

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     --background-white: #FAFAFF;
 }
 
+
 @keyframes navanimation {
     25% {
         color: var(--main-orange);
@@ -422,13 +423,18 @@ section#contact {
     font-weight: bold;
     font-size: 32px;
     letter-spacing: 0.02em;
+    box-sizing: border-box;
 
     color: #222222;
 }
 
+#contact h3 {
+    margin-bottom: 20px;
+}
+
 #contact-form {
     width: 85%;
-    margin: 50px 7.5%;
+    margin: 0 auto;
     display: flex;
     height: 80%;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.05);
@@ -441,6 +447,7 @@ section#contact {
     color: white;
     font-size: 18px;
     width: 40%;
+    box-sizing: border-box;
     padding: 5%;
     display: flex;
     flex-direction: column;
@@ -623,6 +630,7 @@ form textarea {
 
     nav ul li {
         display: block;
+        box-sizing: border-box;
         width: 100%;
         text-align: center;
         margin-bottom: 15px;
@@ -718,6 +726,7 @@ form textarea {
     #skills-front-rectangle {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1.5fr 1fr;
+        margin-bottom: 20px;
     }
 
     .skill {
@@ -785,6 +794,12 @@ form textarea {
     }
 
     /* Contact form */
+
+    section#contact {
+        padding: 0;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
 
     #contact-form {
         flex-direction: column;
@@ -901,7 +916,6 @@ form textarea {
 
     section#contact {
         width: 95%;
-        padding-bottom: 15;
     }
 
     #contact-form {
